<resources>
    <string name="app_name">AAD-PlayGround</string>
    <string name="label_name_file">Nombre del fichero</string>
    <string name="label_content_file">Contenido del fichero</string>
    <string name="label_select_file">Escribe el nombre del fichero</string>
    <string name="label_button_save">Guardar</string>
    <string name="label_button_explorer">Listar Ficheros</string>
    <string name="label_button_show_content">Mostrar contenido</string>
    <string name="label_button_delete_file">Eliminar fichero</string>
    <string name="label_button_file">Fichero</string>
    <string name="label_button_mem">Memoria</string>

    <!-- Shared Preferences Keys -->
    <string name="preference_file_key">ut02_shared_pref</string>
    <string name="preference_encrypt_file_key">ut02_shared_pref_encrypt</string>

</resources>