<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/option_data_source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/option_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_button_file" />

        <RadioButton
            android:id="@+id/option_mem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_button_mem" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_name_file" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_name_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_content_file" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_content_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/action_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_button_save" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/action_explorer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_button_explorer" />

    <TextView
        android:id="@+id/viewer_files"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_select_file" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_name_file_selected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/action_show_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_button_show_content" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/action_delete_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_button_delete_file" />

    <TextView
        android:id="@+id/text_file_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>